--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ steps:
 - script: |
     dotnet build --configuration $(buildConfiguration)
     dotnet test dotnetcore-tests --configuration $(buildConfiguration) --logger trx
-    dotnet publish --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)
+    dotnet publish --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/build-artifact
 
 - task: PublishTestResults@2
   condition: succeededOrFailed()
@@ -21,7 +21,15 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/build-artifact' 
     artifactName: 'drop' 
     publishLocation: 'Container'
-    TargetPath: '$(Build.ArtifactStagingDirectory)/drop'
+    TargetPath: '$(Build.ArtifactStagingDirectory)/drop/build'
+
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/drop/build' 
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/drop/$(Build.BuildId).zip' 
+    replaceExistingArchive: false 
