Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,11 +24,11 @@ steps:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)/build-artifact' 
     artifactName: 'drop' 
     publishLocation: 'Container'
-    TargetPath: '$(Build.ArtifactStagingDirectory)/drop/build'
+    TargetPath: '$(Build.ArtifactStagingDirectory)/drop'
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/drop/build' 
+    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/drop' 
     includeRootFolder: false
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/drop/$(Build.BuildId).zip' 
