--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,3 @@
-# Build ASP.NET Core project using Azure Pipelines
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core?view=vsts
-
 pool:
   vmImage: 'vs2017-win2016'
   
@@ -11,27 +8,18 @@ steps:
 - script: |
     dotnet build --configuration $(buildConfiguration)
     dotnet test dotnetcore-tests --configuration $(buildConfiguration) --logger trx
-    dotnet publish --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/build-artifact
 
-- task: PublishTestResults@2
-  condition: succeededOrFailed()
+- task: DotNetCoreCLI@2
+  displayName: Publish
   inputs:
-    testRunner: VSTest
-    testResultsFiles: '**/*.trx'
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
+    zipAfterPublish: True
 
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/build-artifact' 
-    includeRootFolder: false
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/drop/$(Build.BuildId).zip' 
-    replaceExistingArchive: false 
-    
 - task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact'
   inputs:
-    pathtoPublish: '$(Build.ArtifactStagingDirectory)/build-artifact' 
-    artifactName: 'drop' 
-    publishLocation: 'Container'
-    TargetPath: '$(Build.ArtifactStagingDirectory)/drop'
+    PathtoPublish: '$(build.artifactstagingdirectory)'
 
 
